--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "tailwindcss": "^3.4.0",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7",
+    "web3": "^4.4.0"
   }
 }
