--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ logs
 .env
 .env.*
 !.env.example
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
