--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.3",
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "autoprefixer": "^10.4.16",
+    "chai": "4.3.7",
+    "ethers": "^6.10.0",
+    "hardhat": "^2.19.4",
+    "hardhat-gas-reporter": "^1.0.9",
     "nuxt": "^3.9.0",
     "postcss": "^8.4.33",
+    "solidity-coverage": "^0.8.5",
     "tailwindcss": "^3.4.0",
+    "typechain": "^8.3.2",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5"
   },
