--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.3",
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@typechain/ethers-v6": "^0.5.1",
