--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "dotenv": "^16.3.2",
     "pinia": "^2.1.7",
     "web3": "^4.4.0"
   }
