--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@cssninja/nuxt-toaster": "^0.3.12",
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "autoprefixer": "^10.4.16",
